# opensession

./: .dockerignore  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.alpine  LICENSE  README.ko.md  README.md  build.sh  docker-compose.test.yml  docker-compose.yml  docs.ko.md  docs.md  plan.md  release-plz.toml  wrangler.toml
.githooks/: pre-push  (+1 more)
crates/api/: CHANGELOG.md  Cargo.toml
crates/api-client/: CHANGELOG.md  Cargo.toml
crates/api-client/src/: client.rs  lib.rs  retry.rs
crates/api-types/: Cargo.toml
crates/api-types/bindings/: ApiError.ts  CreateInviteRequest.ts  GroupDetailResponse.ts  HealthResponse.ts  JoinResponse.ts  ListGroupsResponse.ts  ListMembersResponse.ts  MemberResponse.ts  RegisterRequest.ts  RegisterResponse.ts  SessionDetail.ts  SessionListQuery.ts  SessionListResponse.ts  SessionSummary.ts  UpdateGroupRequest.ts  UploadRequest.ts  UploadResponse.ts  UserSettingsResponse.ts  VerifyResponse.ts
crates/api-types/src/: lib.rs
crates/api/bindings/: AcceptInvitationResponse.ts  AddMemberRequest.ts  ApiError.ts  AuthProvidersResponse.ts  AuthRegisterRequest.ts  AuthTokenResponse.ts  ChangePasswordRequest.ts  ConfigSyncResponse.ts  CreateGroupRequest.ts  CreateTeamRequest.ts  GroupRef.ts  GroupResponse.ts  HealthResponse.ts  InvitationResponse.ts  InviteRequest.ts  InviteResponse.ts  LinkedProvider.ts  ListInvitationsResponse.ts  ListMembersResponse.ts  ListTeamsResponse.ts  LoginRequest.ts  LogoutRequest.ts  MemberResponse.ts  OAuthLinkResponse.ts  OAuthProviderInfo.ts  OkResponse.ts  RefreshRequest.ts  RegenerateKeyResponse.ts  RegisterRequest.ts  RegisterResponse.ts  SessionDetail.ts  SessionLink.ts  SessionListQuery.ts  SessionListResponse.ts  SessionSummary.ts  StreamEventsRequest.ts  StreamEventsResponse.ts  SyncedPrivacyConfig.ts  SyncedWatcherConfig.ts  TeamDetailResponse.ts  (+11 more)
crates/api/migrations/: 0001_schema.sql  0002_job_context.sql  0004_oauth_states_provider.sql  0005_sessions_body_url_backfill.sql  0006_sessions_remove_fk_constraints.sql  0007_sessions_list_perf_indexes.sql  0009_session_score_plugin.sql  0010_api_keys_issuance.sql  local_0001_schema.sql  local_0002_session_summaries.sql  local_0003_session_flags.sql  local_0003_vector_index.sql  local_0004_summary_batch_status.sql  local_0005_lifecycle_cleanup_status.sql
crates/api/src/: auth_types.rs  crypto.rs  deploy.rs  desktop_runtime_types.rs  errors.rs  job_types.rs  lib.rs  local_review_types.rs  oauth.rs  parse_preview_source.rs  parse_preview_types.rs  service.rs  session_types.rs  shared_types.rs
crates/cli/: CHANGELOG.md  Cargo.toml
crates/cli/src/: capture_cmd.rs  cat_cmd.rs  cleanup_cmd.rs  cli_args.rs  config.rs  config_cmd.rs  daemon_ctl.rs  discover.rs  docs_cmd.rs  doctor_cmd.rs  entrypoint.rs  handoff.rs  handoff_v1.rs  hooks.rs  index.rs  inspect.rs  locale.rs  log_cmd.rs  main.rs  open_target.rs  output.rs  parse_cmd.rs  register.rs  review.rs  runtime_settings.rs  server.rs  session_ref.rs  setup_cmd.rs  share.rs  stats.rs  stream_push.rs  summarize.rs  summary_cmd.rs  test_cmd.rs  tui_cmd.rs  upload.rs  upload_all.rs  url_opener.rs  user_guidance.rs  view.rs  (+1 more)
crates/cli/tests/: handoff_cli.rs  timeline_cli_linear.rs  view_cli.rs
crates/core/: CHANGELOG.md  Cargo.toml
crates/core/src/: agent_metrics.rs  config.rs  extract.rs  handoff.rs  handoff_artifact.rs  jsonl.rs  lib.rs  object_store.rs  sanitize.rs  scoring.rs  session.rs  source_uri.rs  stats.rs  testing.rs  trace.rs  validate.rs
crates/daemon/: Cargo.toml
crates/daemon/src/: cli.rs  config.rs  config_sync.rs  entrypoint.rs  health.rs  hooks.rs  main.rs  pull_sync.rs  repo_registry.rs  retry.rs  runtime.rs  scheduler.rs  stream.rs  tail.rs  watcher.rs
crates/e2e/: Cargo.toml
crates/e2e/src/: client.rs  fixtures.rs  lib.rs  runner.rs
crates/e2e/tests/: common.rs  docker.rs  environment.rs  server.rs  worker.rs
crates/git-native/: CHANGELOG.md  Cargo.toml
crates/git-native/src/: context.rs  error.rs  handoff_artifact_store.rs  lib.rs  ops.rs  refs.rs  store.rs  test_utils.rs  url.rs
crates/local-db/: CHANGELOG.md  Cargo.toml
crates/local-db/migrations/: 0003_max_active_agents.sql  local_0001_schema.sql  local_0002_drop_unused_local_sessions.sql  local_0003_timeline_summary_cache.sql
crates/local-db/src/: connection.rs  git.rs  job_store.rs  lib.rs  migrations.rs  repo_store.rs  session_store.rs  summary_store.rs  sync_store.rs  vector_store.rs
crates/local-store/: Cargo.toml
crates/local-store/src/: lib.rs
crates/parser-discovery/: Cargo.toml
crates/parser-discovery/src/: lib.rs
crates/parsers/: CHANGELOG.md  Cargo.toml
crates/parsers/src/: aider.rs  amp.rs  claude_code.rs  cline.rs  codex.rs  common.rs  cursor.rs  discover.rs  external.rs  gemini.rs  goose.rs  incremental.rs  ingest.rs  lib.rs  opencode.rs
crates/parsers/tests/: claude_code_team.rs  cursor_real_db.rs  parser_conformance.rs  real_data.rs
crates/paths/: Cargo.toml
crates/paths/src/: lib.rs
crates/runtime-config/: CHANGELOG.md  Cargo.toml
crates/runtime-config/src/: change_reader.rs  daemon.rs  defaults.rs  git_storage.rs  identity_privacy.rs  lib.rs  lifecycle.rs  server.rs  summary.rs  vector.rs  watcher.rs
crates/server/: Cargo.toml
crates/server/src/: app_config.rs  error.rs  main.rs  startup.rs  storage.rs
crates/summary/: CHANGELOG.md  Cargo.toml
crates/summary-runtime/: Cargo.toml
crates/summary-runtime/src/: lib.rs  provider.rs
crates/summary/src/: git.rs  lib.rs  prompt.rs  provider.rs  text.rs  types.rs
crates/tui/: CHANGELOG.md  Cargo.toml  long_file_ownership.toml
crates/tui/src/: app.rs  async_ops.rs  cli_export.rs  config.rs  lib.rs  main.rs  platform_api_storage.rs  session_timeline.rs  theme.rs  timeline_summary.rs  ui.rs
crates/tui/tests/: long_file_ownership.rs
crates/worker/: Cargo.toml
crates/worker/src/: config.rs  crypto.rs  db_helpers.rs  error.rs  lib.rs  storage.rs
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: main.rs  main_tests.rs
(+1990 files in other folders)
