[workspace]
resolver = "2"
members = [
    "crates/daemon",
    "crates/server",
]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
collapsible_if = "warn"
empty_line_after_doc_comments = "warn"
needless_return = "warn"
redundant_closure = "warn"
single_match = "warn"

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/hwisu/opensession"
homepage = "https://opensession.io"
authors = ["opensession.io contributors"]

[workspace.dependencies]
opensession-core = { version = "0.1.0", path = "../opensession-core/crates/core" }
opensession-parsers = { version = "0.1.0", path = "../opensession-core/crates/parsers" }
opensession-api-types = { version = "0.1.0", path = "../opensession-core/crates/api-types", default-features = false }
opensession-api-client = { version = "0.1.0", path = "../opensession-core/crates/api-client" }
opensession-local-db = { version = "0.1.0", path = "../opensession-core/crates/local-db" }
opensession-git-native = { version = "0.1.0", path = "../opensession-core/crates/git-native" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", features = ["json"] }
notify = "7"
toml = "0.8"
regex = "1"
glob = "0.3"
shellexpand = "3"
ts-rs = "12"
dialoguer = "0.11"

[profile.release]
lto = "thin"
codegen-units = 1
strip = true
panic = "abort"
