[workspace]
resolver = "2"
members = [
    "crates/core",
    "crates/runtime-config",
    "crates/parsers",
    "crates/api",
    "crates/api-client",
    "crates/local-db",
    "crates/git-native",
    "crates/server",
    "crates/daemon",
    "crates/cli",
    "crates/tui",
    "crates/e2e",
]
default-members = [
    "crates/core",
    "crates/runtime-config",
    "crates/parsers",
    "crates/api",
    "crates/api-client",
    "crates/local-db",
    "crates/git-native",
    "crates/server",
    "crates/daemon",
    "crates/cli",
]
exclude = ["crates/worker"]

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
collapsible_if = "warn"
empty_line_after_doc_comments = "warn"
needless_return = "warn"
redundant_closure = "warn"
single_match = "warn"

[workspace.package]
version = "0.2.17"
edition = "2021"
license = "MIT"
repository = "https://github.com/hwisu/opensession"
homepage = "https://opensession.io"
authors = ["opensession.io contributors"]

[workspace.dependencies]
opensession-core = { version = "0.2.17", path = "crates/core" }
opensession-runtime-config = { version = "0.2.17", path = "crates/runtime-config" }
opensession-parsers = { version = "0.2.17", path = "crates/parsers" }
opensession-api = { version = "0.2.17", path = "crates/api", default-features = false }
opensession-api-client = { version = "0.2.17", path = "crates/api-client" }
opensession-local-db = { version = "0.2.17", path = "crates/local-db" }
opensession-git-native = { version = "0.2.17", path = "crates/git-native" }
opensession-e2e = { version = "0.2.8", path = "crates/e2e" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
notify = "8"
toml = "0.8"
regex = "1"
glob = "0.3"
shellexpand = "3"
ts-rs = "12"
dialoguer = "0.11"
base64 = "0.22"
ratatui = "0.30"
crossterm = "0.29"
urlencoding = "2"
tempfile = "3"
gix = "0.79"
sea-query = { version = "0.32", features = ["backend-sqlite", "derive"] }

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 4
strip = true
panic = "abort"
