[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/local-store",
    "crates/runtime-config",
    "crates/summary",
    "crates/parsers",
    "crates/api",
    "crates/api-client",
    "crates/local-db",
    "crates/git-native",
    "crates/server",
    "crates/daemon",
    "crates/cli",
    "crates/e2e",
]
default-members = [
    "crates/core",
    "crates/local-store",
    "crates/runtime-config",
    "crates/summary",
    "crates/parsers",
    "crates/api",
    "crates/api-client",
    "crates/local-db",
    "crates/git-native",
    "crates/server",
    "crates/daemon",
    "crates/cli",
]
exclude = ["crates/worker"]

[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
collapsible_else_if = "allow"
collapsible_if = "allow"
empty_line_after_doc_comments = "warn"
field_reassign_with_default = "allow"
needless_return = "warn"
redundant_closure = "warn"
single_match = "warn"
undocumented_unsafe_blocks = "warn"

[workspace.package]
version = "0.2.34"
edition = "2024"
rust-version = "1.93"
license = "MIT"
repository = "https://github.com/hwisu/opensession"
homepage = "https://opensession.io"
authors = ["opensession.io contributors"]

[workspace.dependencies]
opensession-core = { version = "0.2.34", path = "crates/core" }
opensession-local-store = { version = "0.2.34", path = "crates/local-store" }
opensession-runtime-config = { version = "0.2.34", path = "crates/runtime-config" }
opensession-summary = { version = "0.2.34", path = "crates/summary" }
opensession-parsers = { version = "0.2.34", path = "crates/parsers" }
opensession-api = { version = "0.2.34", path = "crates/api", default-features = false }
opensession-api-client = { version = "0.2.34", path = "crates/api-client" }
opensession-local-db = { version = "0.2.34", path = "crates/local-db" }
opensession-git-native = { version = "0.2.34", path = "crates/git-native" }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1" }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }
rusqlite = { version = "0.32", features = ["bundled"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
notify = "8"
toml = "0.8"
regex = "1"
glob = "0.3"
shellexpand = "3"
ts-rs = "12"
dialoguer = "0.11"
base64 = "0.22"
sha2 = "0.10"
urlencoding = "2"
tempfile = "3"
gix = "0.79"
sea-query = { version = "0.32", features = ["backend-sqlite", "derive"] }

[profile.dev.package."*"]
opt-level = 1

[profile.release]
lto = "thin"
codegen-units = 4
strip = true
panic = "abort"
