[package]
name = "opensession-api-client"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Typed HTTP client for the OpenSession API"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
opensession-api = { workspace = true, default-features = false }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["time"] }
tracing = { workspace = true }
anyhow = { workspace = true }
