[package]
name = "opensession-api-types"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Shared API types for opensession.io — single source of truth for server and frontend"

[dependencies]
opensession-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
ts-rs = { workspace = true }
