[package]
name = "opensession-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "CLI for opensession.io - discover, upload, and manage AI sessions"

[[bin]]
name = "opensession"
path = "src/main.rs"

[dependencies]
opensession-core = { workspace = true }
opensession-parsers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
