[package]
name = "opensession-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "HAIL (Human AI Interaction Log) core types and validation"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
regex = { workspace = true }
