[package]
name = "opensession-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Background daemon for automatic session detection and upload"

[lints]
workspace = true

[dependencies]
opensession-core = { workspace = true }
opensession-parsers = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
notify = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
