[package]
name = "opensession-daemon"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
publish = false
description = "Background daemon for automatic session detection and upload"
keywords = ["ai", "session", "daemon", "opensession"]
categories = ["command-line-utilities", "development-tools"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[lints]
workspace = true

[dependencies]
opensession-core = { workspace = true }
opensession-runtime-config = { workspace = true }
opensession-parsers = { workspace = true }
opensession-api = { workspace = true, default-features = false }
opensession-api-client = { workspace = true }
opensession-local-db = { workspace = true }
opensession-git-native = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time", "signal"] }
notify = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }

[dev-dependencies]
tempfile = "3"
