[package]
name = "opensession-e2e"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "E2E test suite for OpenSession API"
publish = false

[lib]
test = false
doctest = false

[lints]
workspace = true

[dependencies]
opensession-core = { workspace = true }
opensession-api = { workspace = true, default-features = false }
opensession-api-client = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync"] }
uuid = { workspace = true }
chrono = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
urlencoding = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }
