[package]
name = "opensession-local-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Local source object storage helpers for OpenSession"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[lib]
doctest = false

[lints]
workspace = true

[dependencies]
opensession-core = { workspace = true }
opensession-paths = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
