[package]
name = "opensession-runtime-config"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared runtime configuration types for daemon/TUI"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[lints]
workspace = true

[dependencies]
serde = { workspace = true }
toml = { workspace = true }
