[package]
name = "opensession-server"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Self-hosted server for opensession.io (Axum + SQLite)"

[lints]
workspace = true

[dependencies]
opensession-core = { workspace = true }
opensession-api-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
