[package]
name = "opensession-server"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Self-hosted server for opensession.io (Axum + SQLite)"
keywords = ["ai", "session", "server", "opensession"]
categories = ["web-programming::http-server", "development-tools"]

[lints]
workspace = true

[dependencies]
opensession-core = { workspace = true }
opensession-api-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true, features = ["macros"] }
tower-http = { workspace = true }
rusqlite = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
uuid = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
sea-query = "0.32"
