[package]
name = "opensession-summary"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Shared semantic summary engine for OpenSession App/CLI/Daemon"
keywords = ["summary", "llm", "session", "diff", "git"]
categories = ["development-tools"]
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[lints]
workspace = true

[dependencies]
opensession-core = { workspace = true }
opensession-runtime-config = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
sha2 = { workspace = true }
hex = "0.4"

[dev-dependencies]
chrono = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
