[package]
name = "opensession-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Terminal UI for browsing opensession.io sessions"

[[bin]]
name = "opensession-tui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
opensession-core = { workspace = true }
opensession-parsers = { workspace = true }

anyhow = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }

ratatui = "0.29"
crossterm = "0.28"
