[package]
name = "opensession-tui"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Terminal UI for browsing opensession.io sessions"
include = ["src/**/*.rs", "Cargo.toml", "LICENSE", "README.md"]

[lib]
name = "opensession_tui"
path = "src/lib.rs"

[[bin]]
name = "opensession-tui"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
opensession-core = { workspace = true }
opensession-parsers = { workspace = true }
opensession-api = { workspace = true, default-features = false }
opensession-api-client = { workspace = true }
opensession-local-db = { workspace = true }
opensession-git-native = { workspace = true }

anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true, features = ["blocking"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }
toml = { workspace = true }
serde = { workspace = true }
unicode-width = "0.1"

ratatui = { workspace = true }
crossterm = { workspace = true }
