[package]
name = "opensession-worker"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Cloudflare Workers backend for opensession.io"

[dependencies]
opensession-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
worker = "0.4"
chrono = { workspace = true }
uuid = { workspace = true }

[lib]
crate-type = ["cdylib"]
