[package]
name = "opensession-worker"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Cloudflare Workers backend for opensession.io"

[dependencies]
opensession-core = { path = "../core" }
opensession-api = { path = "../api", default-features = false, features = ["backend"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
worker = { version = "0.7", features = ["d1"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "js"] }
urlencoding = "2"
sea-query = "0.32"

# getrandom with "js" feature for wasm — propagates to api via feature unification
getrandom = { version = "0.2", features = ["js"] }

[lints.clippy]
all = { level = "warn", priority = -1 }
collapsible_if = "warn"
empty_line_after_doc_comments = "warn"
needless_return = "warn"
redundant_closure = "warn"
single_match = "warn"

[lib]
crate-type = ["cdylib"]
