[package]
name = "opensession-worker"
version = "0.2.0"
edition = "2024"
rust-version = "1.93"
license = "MIT"
description = "Cloudflare Workers backend for opensession.io"

[dependencies]
opensession-core = { path = "../core" }
opensession-api = { path = "../api", default-features = false, features = ["backend"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
worker = { version = "0.7", features = ["d1"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "js"] }
urlencoding = "2"
sea-query = "0.32"
base64 = "0.22"

# getrandom with "js" feature for wasm — propagates to api via feature unification
getrandom = { version = "0.2", features = ["js"] }

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
collapsible_else_if = "allow"
collapsible_if = "allow"
empty_line_after_doc_comments = "warn"
field_reassign_with_default = "allow"
needless_return = "warn"
redundant_closure = "warn"
single_match = "warn"
undocumented_unsafe_blocks = "warn"

[lib]
crate-type = ["cdylib"]
