[package]
name = "opensession-desktop"
version = "0.2.33"
description = "OpenSession desktop preview shell (Tauri + shared web UI)"
edition = "2021"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
opensession-api = { path = "../../crates/api" }
opensession-local-db = { path = "../../crates/local-db" }
opensession-core = { path = "../../crates/core" }
opensession-parsers = { path = "../../crates/parsers" }
opensession-runtime-config = { path = "../../crates/runtime-config" }
opensession-summary = { path = "../../crates/summary" }
opensession-git-native = { path = "../../crates/git-native" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
base64 = "0.22"

[workspace]
