[package]
name = "opensession-desktop"
version = "0.2.34"
description = "OpenSession desktop preview shell (Tauri + shared web UI)"
edition = "2024"
rust-version = "1.93"
publish = false

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
opensession-api = { path = "../../crates/api" }
opensession-local-db = { path = "../../crates/local-db" }
opensession-local-store = { path = "../../crates/local-store" }
opensession-core = { path = "../../crates/core" }
opensession-paths = { path = "../../crates/paths" }
opensession-parsers = { path = "../../crates/parsers" }
opensession-parser-discovery = { path = "../../crates/parser-discovery" }
opensession-runtime-config = { path = "../../crates/runtime-config" }
opensession-summary = { path = "../../crates/summary" }
opensession-summary-runtime = { path = "../../crates/summary-runtime" }
opensession-git-native = { path = "../../crates/git-native" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
toml = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
base64 = "0.22"

[lints.rust]
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
all = { level = "warn", priority = -1 }
collapsible_else_if = "allow"
collapsible_if = "allow"
empty_line_after_doc_comments = "warn"
field_reassign_with_default = "allow"
needless_return = "warn"
redundant_closure = "warn"
single_match = "warn"
undocumented_unsafe_blocks = "warn"

[workspace]
